made the weather bug smaller on small media

--- a/app/assets/stylesheets/foods.scss
+++ b/app/assets/stylesheets/foods.scss
@@ -104,6 +104,10 @@ p {
   .comment {
     width: 300px;
   }
+  #bug {
+    width: 30px;
+    height: 30px;
+  }
 
 }
 
